--- a/portfolio.html
+++ b/portfolio.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Your Name</title>
+<title>Portfolio</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -319,26 +319,26 @@ $(document).ready(function () {
 
 
 
+<h1 class="title toc-ignore">Portfolio</h1>
 
 </div>
 
 
-<p><img src="avatar.jpg" style=width:40% class="img-circle"></p>
+<p><em>Check out some examples of my work below</em></p>
 <p><br></p>
-<div id="welcome-my-name-is-dylan-wegmann." class="section level1">
-<h1>Welcome! My name is Dylan Wegmann.</h1>
-<p></br></p>
-<div id="i-am-a-senior-pursuing-a-degree-in-biology." class="section level5">
-<h5>I am a Senior pursuing a degree in Biology.</h5>
-</div>
-<div id="in-my-free-time-i-enjoy-playing-golf." class="section level5">
-<h5>In my free time I enjoy playing golf.</h5>
-</div>
-<div id="i-dont-have-any-data-related-projects-either-but-if-i-did-you-could-find-them-here" class="section level5">
-<h5>I don’t have any data-related projects either, but if I did you could find them <a href="/portfolio">here</a>!</h5>
-<hr />
-</div>
-</div>
+<ul>
+<li><p><i class="fa fa-chart-line"> </i> <a href="https://www.github.com">Project 1: Description</a></p>
+<ul>
+<li>Longer Description</li>
+</ul></li>
+</ul>
+<p><br></p>
+<ul>
+<li><p><i class="fa fa-chart-pie"> </i> <a href="https://www.google.com">Project 2: Description</a></p>
+<ul>
+<li>Longer Description</li>
+</ul></li>
+</ul>
 
 
 
